crates/swc_ecma_parser/tests/test262-error-references/fail/4aa964c9923ef975.js.stderr
error: Expected a binary digit
 --> $DIR/tests/test262-parser/fail/4aa964c9923ef975.js:1:3
  |
1 | 0b9
  |   ^

